# vand-2026

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/industrial/: pyproject.toml
examples/industrial/src/industrial_example/: __init__.py  model.py  submit.py  test.py  train.py
examples/retail/: pyproject.toml
examples/retail/src/retail_example/: __init__.py  model.py  submit.py  test.py  train.py
tracks/industrial/: README.md  pyproject.toml
tracks/industrial/src/industrial/: __init__.py  model.py  submit.py  test.py  train.py
tracks/retail/: README.md  pyproject.toml
tracks/retail/src/retail/: __init__.py  model.py  submit.py  test.py  train.py
utils/: README.md  auto_batch.py  pyproject.toml  requirements.txt
utils/industrial/: __init__.py  dataset.py  evaluate.py  submission.py  types.py
utils/retail/: __init__.py  dataset.py  evaluate.py  submission.py  types.py
