[project]
name = "vand-2026"
version = "0.1.0"
description = "VAND 4.0 Challenge @ CVPR 2026 — Participant Scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "tracks/*", "examples/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["vand", "industrial", "retail", "industrial_example", "retail_example"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.1",
    "prek>=0.1.0",
]
