[project]
name = "vand-retail-example"
version = "0.1.0"
description = "VAND 4.0 Retail Track — Baseline example"
requires-python = ">=3.11"
dependencies = ["vand"]

[project.scripts]
train-retail-example = "retail_example.train:main"
test-retail-example = "retail_example.test:main"
submit-retail-example = "retail_example.submit:main"

[tool.uv.sources]
vand = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_example"]
