[project]
name = "vand-industrial"
version = "0.1.0"
description = "VAND 4.0 Industrial Track — Your submission"
requires-python = ">=3.11"
dependencies = ["vand"]

[project.scripts]
train-industrial = "industrial.train:main"
test-industrial = "industrial.test:main"
submit-industrial = "industrial.submit:main"

[tool.uv.sources]
vand = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/industrial"]
